samples/_failures_safe/1761472047_00370a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3669c3c7.c: In function ‘main’:
./samples/SAFE/__tmp_3669c3c7.c:160:5: error: expected expression at end of input
  160 |     if (
      |     ^~
./samples/SAFE/__tmp_3669c3c7.c:160:5: error: expected declaration or statement at end of input
